Data from spacing fix

--- a/courses/static/scss/course_detail.scss
+++ b/courses/static/scss/course_detail.scss
@@ -30,6 +30,11 @@
 
 }
 
+.data-from{
+  display: inline;
+  margin-right: 0 !important;
+}
+
 .course-detail {
   // overflow-x: hidden;
 
